* minor code changes/improvements/cleanups